--- a/index.html
+++ b/index.html
@@ -15,40 +15,43 @@
       <img src="assets/images/illustration-sign-up-desktop.svg" alt="" class="hidden md:block h-[32rem]">
       <img src="assets/images/illustration-sign-up-mobile.svg" alt="" class="w-full md:hidden">
     
-      <div class="grid gap-6 p-8 md:gap-4">
-        <h1 class="text-4xl font-bold md:text-md md:font-bold">Stay updated!</h1>
-        <p class="text-xl md:text-[1rem] font-medium">
+      <div class="grid gap-6 p-10 md:gap-4">
+        <h1 class="text-5xl text-Blue800 font-bold md:text-md md:font-bold">Stay updated!</h1>
+        <p class="text-xl md:text-[1rem]">
           Join 60,000+ product managers receiving monthly updates on:
         </p>
         <ul class="grid gap-5 md:gap-2">
           <li class="flex items-center space-x-4">
             <img src="assets/images/icon-list.svg" class="" alt="">
-            <span class="text-xl font-medium md:text-[1rem]">
+            <span class="text-xl md:text-[1rem]">
               Product discovery and building what matters
             </span>
           </li>
           <li class="flex items-center space-x-4">
             <img src="assets/images/icon-list.svg" class="" alt="">
-            <span class="text-xl font-medium md:text-[1rem]">
+            <span class="text-xl md:text-[1rem]">
               Measuring to ensure updates are a success
             </span>
           </li>
           <li class="flex items-center space-x-4">
             <img src="assets/images/icon-list.svg" class="" alt="">
-            <span class="text-xl font-medium md:text-[1rem]">
+            <span class="text-xl md:text-[1rem]">
               And much more!
             </span>
           </li>
         </ul>
-        <form class="grid mt-5 gap-2 md:gap-1">
-          <label class="text-Blue800 font-bold" for="email">Email address</label>
-          <input class="border-2 border-Grey rounded-lg p-4" type="email" placeholder="email@company.com">
-          <button type="submit" class="bg-Blue800 text-White p-4 rounded-lg mt-5 font-medium">Subscribe to monthly newsletter</button>
+        <form id="form" class="grid mt-5 gap-2 md:gap-1">
+          <div class="flex justify-between">
+            <label class="text-Blue800 font-bold" for="email">Email address</label>
+            <span class="error-message hidden font-medium text-sm text-Red">Valid email required</span>
+          </div>
+          <input id="email" class="border border-Grey rounded-lg p-4 focus:outline-none hover:border-2" type="email" placeholder="email@company.com">
+        <button type="submit" class="btn bg-Blue800 text-White p-4 rounded-lg mt-5 font-medium mb-5 transition duration-150 ease-in-out hover:bg-Red hover:shadow-[0_35px_35px_rgba(225,4,0,0.25)]">Subscribe to monthly newsletter</button>
         </form>
       </div>
     </section>
     
-    <section class="hidden fixed top-0 w-full h-screen bg-Blue800 flex md:justify-center md:items-center">
+    <section class="success fixed hidden top-0 w-full h-screen bg-Blue800 flex md:justify-center md:items-center">
       <div  class="w-full h-screen flex flex-col px-6 py-16 gap-4 bg-White md:w-1/3 md:h-auto md:py-6 md:px-10 md:rounded-lg">
         <img class="w-16 md:w-14" src="assets/images/icon-success.svg" alt="">
         <h1 class="text-4xl font-bold w-2/3">Thanks for subscribing!</h1>
@@ -56,28 +59,20 @@
           A confirmation email has been sent to <span class="font-medium">ash@loremcompany.com.</span>
           Please open it and click the button inside to confirm your subscription.
         </p>
-        <button class="relative top-[17rem] bg-Blue800 w-full mx-auto p-3 rounded-lg text-White mb-3 md:top-auto">Dismiss message</button>
+        <button class="cancel relative top-[17rem] bg-Blue800 w-full mx-auto p-3 rounded-lg text-White mb-3 md:top-auto transition duration-1500 ease-in-out hover:bg-Red hover:shadow-[0_35px_35px_rgba(225,4,0,0.25)]">Dismiss message</button>
       </div>
     </section>
   </main>
   <!-- Sign-up form start -->
-
-  
-  
-  
-
-  
-
   <!-- Sign-up form end -->
-
   <!-- Success message start -->
-
-
   <!-- Success message end -->
   
-  <div class="attribution flex justify-center mt-10">
+  <div class="attribution flex justify-center mb-4">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="mx-1">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/adeshinayomi" class="mx-1">Adeshina</a>.
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
